# levenshtein

./: CMakeLists.txt  LICENSE  README.md  build.sh  composer.json  levenshtein.cpp  levenshtein.h
src/Nfilin/Libs/: Costs.php  Levenshtein.php  Storage.php
src/extension/: build.sh  config.h  config.m4  costs.cpp  costs.h  levenshtein.cpp  levenshtein.h  nf_functions.h  php_levenshtein.cpp  php_levenshtein.h  storage.cpp  storage.h  zend_engine_2_functions.h  zend_engine_3_functions.h  zend_engine_functions.h
src/extension/tests/: 001.phpt  002.phpt  003.phpt
